--- a/styles/header.css
+++ b/styles/header.css
@@ -22,7 +22,12 @@ header {
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);
 }
 
-.header-icon-pd {
-  padding: 5px;
+header button {
+  display: flex;
+  align-items: center;
+  padding: 10px 15px;
+  border: none;
+  background-color: transparent;
+  border-radius: 5px;
   cursor: pointer;
 }
