--- a/styles/footerSection.css
+++ b/styles/footerSection.css
@@ -33,7 +33,7 @@ footer nav {
   background-color: #f8f8f8;
   width: 100%;
   row-gap: 15px;
-  padding: 15px 0;
+  padding: 10px 15px;
 }
 
 footer button {
