--- a/styles/footerSection.css
+++ b/styles/footerSection.css
@@ -42,6 +42,7 @@ footer button {
 
 .icon-text-button {
   display: flex;
+  width: 100%;
   flex-direction: column;
   align-items: center;
   border: none;
