--- a/styles/general.css
+++ b/styles/general.css
@@ -36,7 +36,6 @@ body {
   color: var(--color-fonts);
   background-color: var(--color-bck);
   min-height: 100vh;
-  position: relative;
 }
 
 a {
@@ -56,6 +55,10 @@ h4,
 h5,
 h6 {
   font-family: var(--font-primary);
+}
+
+button {
+  touch-action: manipulation;
 }
 
 /* Google Icons */
