--- a/styles/footerSection.css
+++ b/styles/footerSection.css
@@ -11,7 +11,8 @@
 --------------------------------------------------------------*/
 
 footer {
-  position: sticky;
+  position: absolute;
+  width: 100%;
   bottom: 0;
   display: flex;
   justify-content: space-around;
