--- a/styles/mainSection.css
+++ b/styles/mainSection.css
@@ -13,7 +13,7 @@
 main {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: auto;
     background-color: #f0f0f0;
 }
 
