--- a/styles/footerSection.css
+++ b/styles/footerSection.css
@@ -11,6 +11,7 @@
 --------------------------------------------------------------*/
 
 footer {
+  display: block;
   position: absolute;
   width: 100%;
   bottom: 0;
