--- a/styles/mainSection.css
+++ b/styles/mainSection.css
@@ -42,3 +42,17 @@ main {
     background-color: transparent;
     cursor: pointer;
 }
+
+/*--------------------------------------------------------------
+# Main Product Grid Section Styling
+--------------------------------------------------------------*/
+
+.main-productGrid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 10px;
+    padding: 10px 15px;
+    height: 100%;
+    background-color: lemonchiffon;
+
+}
