--- a/styles/general.css
+++ b/styles/general.css
@@ -31,6 +31,12 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   display: block;
   position: relative;
@@ -74,3 +80,7 @@ button {
 }
 
 /* END of Google Icons */
+
+.btn-pad {
+  padding: 5px 10px;
+}
