--- a/styles/utilis.css
+++ b/styles/utilis.css
@@ -1,3 +1,5 @@
+/* Search Input Styling  */
+
 .search-container {
   display: flex;
   align-items: center;
@@ -12,3 +14,6 @@
   border: none;
   outline: none;
 }
+
+/* END of Search Input Styling */
+
