--- a/styles/mainSection.css
+++ b/styles/mainSection.css
@@ -56,3 +56,39 @@ main {
     background-color: lemonchiffon;
 
 }
+
+/*--------------------------------------------------------------
+# Category Profile Section Styling
+--------------------------------------------------------------*/
+
+.cat-container {
+    display: flex;
+    flex-direction: row;
+    column-gap: 10px;
+    align-items: center;
+    justify-content: start;
+    padding: 10px 15px;
+    background-color: #fff;
+    overflow: auto;
+    height: 70px;
+}
+
+.cat-profile {
+    display: flex;
+    min-width: 50px;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    border: solid 1px rgb(198, 67, 93);
+    cursor: pointer;
+    padding: 2px;
+    border-radius: 15px;
+}
+
+.cat-profile img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+
+}
