--- a/styles/mainSection.css
+++ b/styles/mainSection.css
@@ -69,7 +69,7 @@ main {
     justify-content: start;
     padding: 10px 15px;
     background-color: #fff;
-    overflow: auto;
+    overflow-x: auto;
     height: 70px;
 }
 
