--- a/styles/mainSection.css
+++ b/styles/mainSection.css
@@ -53,7 +53,6 @@ main {
     gap: 10px;
     padding: 10px 15px;
     height: 100%;
-    background-color: lemonchiffon;
 
 }
 
@@ -83,6 +82,7 @@ main {
     cursor: pointer;
     padding: 2px;
     border-radius: 15px;
+    pointer-events: none; /* Disable pointer events on .cat-profile */
 }
 
 .cat-profile img {
@@ -90,5 +90,5 @@ main {
     width: 100%;
     height: 100%;
     border-radius: 15px;
-
 }
+
