--- a/styles/mainSection.css
+++ b/styles/mainSection.css
@@ -66,15 +66,15 @@ main {
     column-gap: 10px;
     align-items: center;
     justify-content: start;
-    padding: 10px 15px;
     background-color: #fff;
     overflow-x: auto;
-    height: 70px;
+    height: 100px;
 }
 
 .cat-profile {
     display: flex;
     min-width: 50px;
+    max-width: 50px;
     align-items: center;
     justify-content: center;
     height: 50px;
@@ -82,7 +82,6 @@ main {
     cursor: pointer;
     padding: 2px;
     border-radius: 15px;
-    pointer-events: none; /* Disable pointer events on .cat-profile */
 }
 
 .cat-profile img {
@@ -90,5 +89,5 @@ main {
     width: 100%;
     height: 100%;
     border-radius: 15px;
-}
 
+}
