--- a/styles/mainSection.css
+++ b/styles/mainSection.css
@@ -69,7 +69,7 @@ main {
     background-color: #fff;
     overflow-x: auto;
     height: 100px;
-    padding-bottom: 10px;
+    padding: 5px 15px 10px 15px;
 }
 
 .cat-profile {
