--- a/styles/mainSection.css
+++ b/styles/mainSection.css
@@ -61,7 +61,7 @@ main {
 --------------------------------------------------------------*/
 
 .cat-wrap {
-    padding: 5px 15px 10px 15px;
+    padding: 10px 15px 15px 15px;
     background-color: #fff;
 }
 
@@ -74,7 +74,7 @@ main {
     justify-content: start;
     background-color: #fff;
     overflow-x: auto;
-    height: 90px;
+    padding-bottom: 10px;
 }
 
 .cat-profile {
@@ -85,7 +85,6 @@ main {
     justify-content: center;
     height: 50px;
     border: solid 1px rgb(198, 67, 93);
-    cursor: pointer;
     padding: 2px;
     border-radius: 15px;
 }
@@ -95,5 +94,5 @@ main {
     width: 100%;
     height: 100%;
     border-radius: 15px;
-
+    cursor: pointer;
 }
