--- a/styles/mainSection.css
+++ b/styles/mainSection.css
@@ -13,7 +13,8 @@
 main {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    min-height: 700px;
+
     background-color: #f0f0f0;
 }
 
@@ -41,19 +42,6 @@ main {
     border: none;
     background-color: transparent;
     cursor: pointer;
-}
-
-/*--------------------------------------------------------------
-# Main Product Grid Section Styling
---------------------------------------------------------------*/
-
-.main-productGrid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 10px;
-    padding: 10px 15px;
-    height: 100%;
-
 }
 
 /*--------------------------------------------------------------
@@ -87,6 +75,7 @@ main {
     border: solid 1px rgb(198, 67, 93);
     padding: 2px;
     border-radius: 15px;
+    cursor: pointer;
 }
 
 .cat-profile img {
@@ -94,5 +83,37 @@ main {
     width: 100%;
     height: 100%;
     border-radius: 15px;
+}
+
+/*--------------------------------------------------------------
+# End of Category Profile Section Styling
+--------------------------------------------------------------*/
+
+/*--------------------------------------------------------------
+# Main Product Grid Section Styling
+--------------------------------------------------------------*/
+
+.main-productGrid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(126px, 1fr));
+    padding: 20px 15px;
+    gap: 15px;
+    height: auto;
+}
+
+@media screen and (min-width: 768px) {
+    .main-productGrid {
+        grid-template-columns: repeat(auto-fill, minmax(169px, 1fr));
+    }
+}
+
+.product-card {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    background-color: #fff;
+    border-radius: 10px;
+    height: 250px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     cursor: pointer;
 }
