--- a/styles/header.css
+++ b/styles/header.css
@@ -14,6 +14,7 @@ header {
   display: flex;
   position: sticky;
   top: 0;
+  z-index: 1;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
