--- a/styles/mainSection.css
+++ b/styles/mainSection.css
@@ -101,7 +101,7 @@ main {
     height: auto;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 568px) {
     .main-productGrid {
         grid-template-columns: repeat(auto-fill, minmax(169px, 1fr));
     }
@@ -110,10 +110,66 @@ main {
 .product-card {
     display: flex;
     flex-direction: column;
-    padding: 10px;
     background-color: #fff;
     border-radius: 10px;
-    height: 250px;
+    height: auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     cursor: pointer;
+    position: relative;
+}
+
+.prod-img-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    position: relative;
+}
+
+.product-card img {
+    width: 100%;
+    min-height: 173.25px;
+    max-height: 173.25px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    object-fit: fill;
+}
+
+.product-info {
+    display: flex;
+    flex-direction: column;
+    row-gap: 5px;
+    height: 100%;
+    padding: 10px 12px;
+}
+
+.product-info h5 {
+    font-size: 14px;
+    font-weight: 600;
+    color: rgb(14, 22, 28);
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.product-info p {
+    font-size: 12px;
+    color: rgb(255, 0, 0);
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.product-info strike {
+    font-size: 12px;
+    color: rgb(255, 0, 0);
+}
+
+.product-info div {
+    margin-top: 5px;
 }
