--- a/styles/mainSection.css
+++ b/styles/mainSection.css
@@ -131,7 +131,7 @@ main {
     width: 30px;
     height: 20px;
     position: absolute;
-    top: 8px;
+    bottom: 8px;
     right: 8px;
     object-fit: fill;
     border-radius: 3px;
@@ -182,4 +182,18 @@ main {
 
 .product-info div {
     margin-top: 5px;
+}
+
+.discount-label {
+    background: linear-gradient(to right, #ff6a00, #ff4757); /* gradient background */
+    color: white;
+    padding: 3px 8px;
+    font-size: 0.8em;
+    font-weight: bold;
+    border-radius: 5px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5); /* larger drop shadow */
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* text shadow for better readability */
 }
