--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -17,7 +17,7 @@
 .modal-content {
   display: flex;
   width: 80%;
-  height: 80%;
+  height: auto;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   justify-content: center;
