--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -10,8 +10,8 @@
   width: 100vw;
   height: 100vh; 
   overflow: auto; 
-  background-color: rgba(0,0,0,0.4); 
-  transition: bottom 0.2s ease; /* Slide transition */
+  background-color: rgba(0,0,0,0.2); 
+  transition: bottom 0.2s ease, background-color 0.2s ease; /* Slide and background color transition */
 }
 
 .modal-content {
