--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -1,50 +1,56 @@
-.modal {
-  display: none; 
-  position: fixed; 
-  z-index: 1; 
+#modalBackdrop {
+  display: none;
+  position: fixed;
+  top: 0;
   left: 0;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  bottom: -100%; /* Starts off the screen */
-  width: 100vw;
-  height: 100vh; 
-  overflow: auto; 
-  background-color: rgba(0,0,0,0.2); 
-  transition: bottom 0.2s ease, background-color 0.2s ease; /* Slide and background color transition */
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
 }
 
-.modal-content {
-  display: flex;
-  width: 80%;
-  height: auto;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  bottom: 0;
-  background-color: #fefefe;
-  margin: auto;
+#modal {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) translateY(100%);
+  background-color: #fff;
   padding: 20px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  border-radius: 5px;
+  z-index: 2;
 }
 
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+#modalContent {
+  text-align: center;
 }
 
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
- 
-}
-
-#openModal {
+#modal.show {
   display: block;
-  cursor: pointer;
+  animation: slideIn 0.3s forwards;
+}
+
+@keyframes slideIn {
+  from {
+    transform: translate(-50%, -50%) translateY(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translate(-50%, -50%);
+    opacity: 1;
+  }
+}
+
+#modalBackdrop.show {
+  display: block;
+  animation: fadeIn 0.3s forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
