--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -7,11 +7,14 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
+  backdrop-filter: blur(8px);
 }
 
 #modal {
   display: none;
   position: fixed;
+  width: 80vw;
+  max-width: 768px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) translateY(100%);
@@ -22,7 +25,10 @@
 }
 
 #modalContent {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 80vh;
 }
 
 #modal.show {
