--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -29,7 +29,7 @@
   max-width: 768px;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) translateY(100%);
+  transform: translate(-50%, -50%);
   background-color: #fff;
   padding: 20px;
   border-radius: 5px;
@@ -50,14 +50,12 @@
 
 @keyframes slideIn {
   from {
-    transform: translate(-50%, -50%) translateY(100%);
     opacity: 0;
-    filter: blur(5px);
+    filter: blur(10px) scale(0.8);
   }
   to {
-    transform: translate(-50%, -50%);
     opacity: 1;
-    filter: blur(0);
+    filter: blur(0) scale(1);
   }
 }
 
