--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -27,9 +27,9 @@
   position: fixed;
   width: 80vw;
   max-width: 768px;
-  top: 50%;
+  top: 100%; /* Start position off-screen */
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
   background-color: #fff;
   padding: 20px;
   border-radius: 5px;
@@ -45,21 +45,16 @@
 
 #modal.show {
   display: block;
-  animation: slideIn 0.3s forwards;
+  animation: slideIn 0.3s forwards, fadeIn 0.3s forwards; /* Apply both slide and fade animation */
 }
 
 @keyframes slideIn {
   from {
-    opacity: 0;
+    top: 100%; /* Start position off-screen */
   }
   to {
-    opacity: 1;
+    top: 50%; /* Slide in to the center */
   }
-}
-
-#modalBackdrop.show {
-  display: block;
-  animation: fadeIn 0.3s forwards;
 }
 
 @keyframes fadeIn {
@@ -70,6 +65,11 @@
     opacity: 1;
   }
 }
+
+#modalBackdrop.show {
+  display: block;
+}
+
 
 /*--------------------------------------------------------------
 # End of Modal Base Script and Styling
