--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -7,7 +7,7 @@
 */
 
 /*--------------------------------------------------------------
-# Modal Base Script and Styling
+# User Action Modal Base Script and Styling
 --------------------------------------------------------------*/
 
 #modalBackdrop {
@@ -78,11 +78,11 @@
 --------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
-# Site Modals
+# Admin Action Modal Base Script and Styling
 --------------------------------------------------------------*/
 
 
 
 /*--------------------------------------------------------------
-# End of Modal Base Script and Styling
+# End of Admin Action Modal Base Script and Styling
 --------------------------------------------------------------*/
