--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -27,7 +27,7 @@
   position: fixed;
   width: 80vw;
   max-width: 768px;
-  top: 100%; /* Start position off-screen */
+  bottom: 0; /* Position at the bottom of the viewport */
   left: 50%;
   transform: translateX(-50%);
   background-color: #fff;
@@ -36,11 +36,12 @@
   z-index: 2;
 }
 
+
 #modalContent {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
+  height: auto;
 }
 
 #modal.show {
