--- a/styles/footerSection.css
+++ b/styles/footerSection.css
@@ -10,7 +10,7 @@
 # Footer Section Styling
 --------------------------------------------------------------*/
 
-footer {
+.b-nav-bar {
   position: sticky;
   width: 100%;
   bottom: 0;
@@ -20,6 +20,7 @@ footer {
   height: auto;
   color: #fff;
   transition: bottom 0.3s ease-in-out;
+  z-index: 100;
 }
 
 /*--------------------------------------------------------------
@@ -27,7 +28,7 @@ footer {
 --------------------------------------------------------------*/
 
 
-footer nav {
+.b-nav-bar {
   display: flex;
   justify-content: space-around;
   background-color: #f8f8f8;
@@ -36,7 +37,7 @@ footer nav {
   padding: 10px 0px;
 }
 
-footer button {
+.b-nav-bar button {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -48,13 +49,13 @@ footer button {
   color: black;
 }
 
-footer button .footer-icon {
+.b-nav-bar button .footer-icon {
   font-size: 21px;
   text-align: center;
   color: var(--color-font);
 }
 
-footer button .footer-btn-text {
+.b-nav-bar button .footer-btn-text {
   font-size: 12px;
   text-align: center;
 }
@@ -62,8 +63,8 @@ footer button .footer-btn-text {
   color: rgb(198, 67, 93);
 }
 
-footer button.selected,
-footer button.selected span {
+.b-nav-bar button.selected,
+.b-nav-bar button.selected span {
   color: rgb(198, 67, 93);
 }
 
