--- a/styles/general.css
+++ b/styles/general.css
@@ -35,17 +35,17 @@
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
 }
 
 body {
-  display: block;
-  position: relative;
-  margin: 0 auto;
-  font-family: var(--font-default);
-  color: var(--color-fonts);
-  background-color: var(--color-bck);
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
-  max-width: 768px;
 }
 
 a {
