--- a/styles/mainSection.css
+++ b/styles/mainSection.css
@@ -141,7 +141,7 @@ main {
     max-height: 173.25px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    object-fit: fill;
+    object-fit: cover;
 }
 
 .product-info {
