--- a/styles/bottomNav.css
+++ b/styles/bottomNav.css
@@ -31,10 +31,12 @@
 .b-nav-bar {
   display: flex;
   justify-content: space-around;
-  background-color: #f8f8f8;
+  background-color: #fff;
   width: 100%;
   row-gap: 15px;
   padding: 10px 0px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
 .b-nav-bar button {
@@ -46,13 +48,13 @@
   cursor: pointer;
   width: 100%;
   row-gap: 2px;
-  color: black;
+  color: rgb(0, 0, 0);
 }
 
 .b-nav-bar button .footer-icon {
   font-size: 21px;
   text-align: center;
-  color: var(--color-font);
+  color: rgb(0, 0, 0);
 }
 
 .b-nav-bar button .footer-btn-text {
@@ -60,12 +62,12 @@
   text-align: center;
 }
 .footer-icon {
-  color: rgb(255, 255, 255);
+  color: var(--color-font);
 }
 
 .b-nav-bar button.selected,
 .b-nav-bar button.selected span {
-  color: rgb(198, 67, 93);
+  color: rgb(218, 134, 134);
 }
 
 /*--------------------------------------------------------------
