--- a/styles/general.css
+++ b/styles/general.css
@@ -16,11 +16,13 @@
 
 /* Colors */
 :root {
-  --color-font:rgb(34, 34, 34);
-  --color-icons: rgb(255, 255, 255);
-  --color-header:#139755;
 
-  --color-bck: rgb(241, 242, 244);
+  --color-body: #f8f9fa;
+  --color-button: rgb(198, 67, 93);
+  --color-bck:rgb(198, 67, 93);
+  --color-font: #ffffff;
+
+
 }
 
 /* Smooth scroll behavior */
@@ -48,6 +50,7 @@ body {
   min-height: 100vh;
   max-width: 768px;
   margin: 0 auto;
+  background-color: var(--color-body);
 }
 
 a {
