--- a/styles/mainSection.css
+++ b/styles/mainSection.css
@@ -129,8 +129,8 @@ main {
     width: 30px;
     height: 20px;
     position: absolute;
-    bottom: 8px;
-    right: 8px;
+    top: 8px;
+    left: 8px;
     object-fit: fill;
     border-radius: 3px;
 }
@@ -183,7 +183,7 @@ main {
 }
 
 .discount-label {
-    background: linear-gradient(to right, #ff6a00, #ff4757); /* gradient background */
+    background: linear-gradient(to right, rgb(198, 67, 93), rgb(198, 67, 93)); /* gradient background */
     color: white;
     padding: 3px 8px;
     font-size: 0.8em;
@@ -191,7 +191,7 @@ main {
     border-radius: 5px;
     position: absolute;
     top: 10px;
-    left: 10px;
+    right: 10px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5); /* larger drop shadow */
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* text shadow for better readability */
 }
