--- a/styles/utilis.css
+++ b/styles/utilis.css
@@ -32,7 +32,7 @@
 .cart-btn {
   width: 100%;
   max-width: 110px;
-  background-color: var(--color-icons);
+  background-color: var(--color-button);
   border: none;
   color: white;
   text-align: center;
