--- a/styles/bottomNav.css
+++ b/styles/bottomNav.css
@@ -34,7 +34,7 @@
   background-color: #fff;
   width: 100%;
   row-gap: 15px;
-  padding: 20px 0px;
+  padding: 15px 0px;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
@@ -46,7 +46,7 @@
   border: none;
   background: none;
   cursor: pointer;
-  width: 100%;
+  width: 80px;
   row-gap: 2px;
   color: rgb(0, 0, 0);
 }
@@ -67,7 +67,7 @@
 
 .b-nav-bar button.selected,
 .b-nav-bar button.selected span {
-  color: rgb(218, 134, 134);
+  color: var(--color-bck);
 }
 
 /*--------------------------------------------------------------
