--- a/styles/mainSection.css
+++ b/styles/mainSection.css
@@ -148,7 +148,7 @@ main {
     display: flex;
     flex-direction: column;
     row-gap: 5px;
-    height: 100%;
+    height: auto;
     padding: 10px 12px;
 }
 
@@ -195,3 +195,30 @@ main {
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5); /* larger drop shadow */
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* text shadow for better readability */
 }
+
+/* Add Product Button */
+
+.addProductBtn {
+    display: flex;
+    margin: 20px auto 0px auto;
+    justify-content: center;
+    background-color: var(--color-bck);
+    color: var(--color-font);
+    border: none;
+    column-gap: 5px;
+    border-radius: 5px;
+    padding: 5px 80px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.addProductBtn button {
+    background-color: transparent;
+    border: none;
+    color: var(--color-font);
+    font-size: 1em;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+/* End of Add Product Button */
