--- a/styles/general.css
+++ b/styles/general.css
@@ -41,13 +41,12 @@
 }
 
 html, body {
-  height: 100%;
+  height: auto;
 }
 
 body {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
   max-width: 768px;
   margin: 0 auto;
   background-color: var(--color-body);
