--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -86,6 +86,15 @@
   }
 }
 
+@keyframes blurIn {
+  from {
+    backdrop-filter: blur(0px);
+  }
+  to {
+    backdrop-filter: blur(8px);
+  }
+}
+
 /*--------------------------------------------------------------
 # End of User Action Modal Styling
 --------------------------------------------------------------*/
