--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -25,6 +25,8 @@
 .modal,
 .modal1,
 .modal2 {
+  width: 90vw;
+  height: auto;
   display: none;
   position: fixed;
   background-color: #fff;
@@ -42,7 +44,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: auto;
 }
 
 /*--------------------------------------------------------------
@@ -54,7 +55,6 @@
 --------------------------------------------------------------*/
 
 .modal1 {
-  width: 80vw;
   max-width: 768px;
   bottom: 0;
   left: 50%;
@@ -97,7 +97,6 @@
 --------------------------------------------------------------*/
 
 .modal2 {
-  width: 80vw;
   max-width: 600px;
   left: 50%;
   top: 50%;
@@ -138,7 +137,7 @@
 --------------------------------------------------------------*/
 
 .modal-backdrop.show {
-  display: block;
+  display: flex;
 }
 
 /*--------------------------------------------------------------
