--- a/styles/normalize.css
+++ b/styles/normalize.css
@@ -165,11 +165,15 @@ textarea {
 }
 
 button:focus,
+button:focus-visible,
 input:focus,
+input:focus-visible,
 textarea:focus,
-select:focus {
-    outline: none;
-
+textarea:focus-visible,
+select:focus,
+select:focus-visible {
+    outline: none !important;
+    box-shadow: none !important;
 }
 
 /**
