--- a/styles/utilis.css
+++ b/styles/utilis.css
@@ -88,3 +88,39 @@
 }
 
 /* End of add to cart and Quantity Styling  */
+
+/* Sendwich Menu Styling  */
+
+#buttonsContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  row-gap: 5px;
+  padding: 8px 20px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 2px 8px 0px, rgba(0, 0, 0, 0.12) 0px 1px 2px 0px, rgba(0, 0, 0, 0.12) 0px 0px 1px 0px;
+  position: absolute;
+  top: 45px;
+  right: 15px;
+  opacity: 0;
+  transform: scale(0.9);
+  transform-origin: top;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  visibility: hidden;
+}
+
+#buttonsContainer.open {
+  opacity: 1;
+  transform: scale(1);
+  visibility: visible;
+}
+
+#buttonsContainer button {
+  font-size: clamp(0.8rem, 2vw, 1rem);
+  padding: 0.5rem 1rem;
+  color: rgb(0, 0, 0);
+  background-color: none;
+  cursor: pointer;
+}
