--- a/styles/utilis.css
+++ b/styles/utilis.css
@@ -94,10 +94,9 @@
 #buttonsContainer {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   row-gap: 5px;
-  padding: 8px 20px;
+  padding: clamp(0.8rem, 2rem, 1rem) 10px;
   background-color: #fff;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 2px 8px 0px, rgba(0, 0, 0, 0.12) 0px 1px 2px 0px, rgba(0, 0, 0, 0.12) 0px 0px 1px 0px;
@@ -119,8 +118,13 @@
 
 #buttonsContainer button {
   font-size: clamp(0.8rem, 2vw, 1rem);
-  padding: 0.5rem 1rem;
+  padding: 0.4rem clamp(0.8rem, 2rem, 1rem);
+  font-weight: 500;
   color: rgb(0, 0, 0);
   background-color: none;
   cursor: pointer;
+}
+
+#buttonsContainer button:hover {
+  background-color: #dfdfdf;
 }
