--- a/styles/utilis.css
+++ b/styles/utilis.css
@@ -96,12 +96,12 @@
   flex-direction: column;
   justify-content: center;
   row-gap: 5px;
-  padding: clamp(0.8rem, 2rem, 1rem) 10px;
+  padding: 8px 10px;
   background-color: #fff;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 2px 8px 0px, rgba(0, 0, 0, 0.12) 0px 1px 2px 0px, rgba(0, 0, 0, 0.12) 0px 0px 1px 0px;
   position: absolute;
-  top: 45px;
+  top: 50px;
   right: 15px;
   opacity: 0;
   transform: scale(0.9);
@@ -117,7 +117,7 @@
 }
 
 #buttonsContainer button {
-  font-size: clamp(0.8rem, 2vw, 1rem);
+  font-size: clamp(0.9rem, 2vw, 1.1rem);
   padding: 0.4rem clamp(0.8rem, 2rem, 1rem);
   font-weight: 500;
   color: rgb(0, 0, 0);
