--- a/styles/home.css
+++ b/styles/home.css
@@ -4,6 +4,7 @@ body {
   font-family: 'Roboto', sans-serif;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
 
 .slider-container {
@@ -13,17 +14,17 @@ body {
   overflow: hidden;
 }
 
-.slides {
-  display: flex;
-  width: 300%;
+.slider-container img {
+  position: absolute;
+  width: 100%;
   height: 100%;
-  transition: transform 0.5s ease-in-out;
+  object-fit: cover;
+  opacity: 0;
+  transition: opacity 1s;
 }
 
-.slider-container img {
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
+.slider-container img.active {
+  opacity: 1;
 }
 
 .slider-container::after {
@@ -37,24 +38,23 @@ body {
   pointer-events: none;
 }
 
-.dots {
+.dots-container {
   position: absolute;
   bottom: 20px;
-  width: 100%;
-  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 10px;
 }
 
-.dot {
-  height: 15px;
-  width: 15px;
-  margin: 0 5px;
-  background-color: #bbb;
+.dots-container .dot {
+  width: 10px;
+  height: 10px;
+  background-color: white;
   border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
   cursor: pointer;
 }
 
-.dot.active {
-  background-color: #717171;
+.dots-container .dot.active {
+  background-color: red;
 }
