--- a/styles/home.css
+++ b/styles/home.css
@@ -9,8 +9,8 @@ body {
 
 .slider-container {
   position: relative;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
@@ -40,7 +40,7 @@ body {
 
 .dots-container {
   position: absolute;
-  bottom: 20px;
+  bottom: 50px;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
