--- a/styles/home.css
+++ b/styles/home.css
@@ -1,10 +1,10 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+  margin: 0 auto;
 }
 
 .slider-container {
@@ -40,7 +40,7 @@ body {
 
 .dots-container {
   position: absolute;
-  bottom: 120px;
+  bottom: 140px;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
@@ -52,7 +52,7 @@ body {
   width: 14px; /* Increased size */
   height: 14px; /* Increased size */
   background-color: transparent;
-  border: 1px solid rgb(122, 122, 122); /* Added border */
+  border: 1px solid rgb(122, 122, 122); 
   border-radius: 50%;
   cursor: pointer;
 }
