--- a/styles/home.css
+++ b/styles/home.css
@@ -9,8 +9,8 @@ body {
 
 .slider-container {
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
 }
 
@@ -40,7 +40,7 @@ body {
 
 .dots-container {
   position: absolute;
-  bottom: 140px;
+  bottom: 30px;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
@@ -67,10 +67,17 @@ body {
 .visitorBtn {
   position: absolute;
   right: 20px;
-  top: 25px;
+  top: 30px;
   z-index: 1;
+
+}
+
+.visitorBtn button {
+  background-color: transparent;
   color: #fff;
-  padding: 8px 15px;
-  cursor: pointer;
+  border: none;
+  outline: none;
   font-size: clamp(1.3rem, 1.5vw, 1.6rem);
+  cursor: pointer;
+  padding: 8px 15px;
 }
