--- a/styles/home.css
+++ b/styles/home.css
@@ -9,7 +9,7 @@ body {
 
 .slider-container {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   overflow: hidden;
 }
@@ -40,7 +40,7 @@ body {
 
 .dots-container {
   position: absolute;
-  bottom: 30px;
+  bottom: 40px;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
@@ -66,7 +66,7 @@ body {
 
 .visitorBtn {
   position: absolute;
-  right: 20px;
+  right: 40px;
   top: 30px;
   z-index: 1;
 
