--- a/styles/home.css
+++ b/styles/home.css
@@ -12,6 +12,10 @@ body {
   width: 100%;
   height: 100vh;
   overflow: hidden;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
 }
 
 .slider-container img {
@@ -40,7 +44,7 @@ body {
 
 .dots-container {
   position: absolute;
-  bottom: 60px;
+  bottom: 40px;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
@@ -66,8 +70,8 @@ body {
 
 .visitorBtn {
   position: absolute;
-  right: 30px;
-  top: 60px;
+  right: 20px;
+  top: 20px;
   z-index: 1;
 
 }
