--- a/styles/home.css
+++ b/styles/home.css
@@ -1,10 +1,10 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+  margin: 0 auto;
 }
 
 .slider-container img {
