--- a/styles/home.css
+++ b/styles/home.css
@@ -5,7 +5,10 @@ body {
   height: 100vh;
   overflow: hidden;
   margin: 0 auto;
+  position: relative;
 }
+
+
 
 .slider-container img {
   position: absolute;
@@ -51,4 +54,41 @@ body {
 
 .dots-container .dot.active {
   background-color: red;
+}
+
+.reg-btn-container {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  flex-direction: column;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 150px;
+  right: 0;
+  display: flex;
+}
+
+.reg-btn-container button {
+  display: inline-block;
+  outline: 0;
+  cursor: pointer;
+  text-align: center;
+  border: 0;
+  padding: 7px 86px;
+  min-height: 36px;
+  min-width: 36px;
+  color: #ffffff;
+  background: #008060;
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 14px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 0px 0px, rgba(0, 0, 0, 0.2) 0px -1px 0px 0px inset;
+}
+
+.reg-text-log {
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: 500;
+  margin-top: 20px;
 }
