--- a/styles/home.css
+++ b/styles/home.css
@@ -60,12 +60,11 @@ body {
   justify-content: start;
   flex-direction: column;
   position: absolute;
-  bottom: 0;
+  bottom: 25px;
   left: 0;
   height: 150px;
   right: 0;
   display: flex;
-  z-index: 1;
 }
 
 .reg-btn-container button {
