--- a/styles/home.css
+++ b/styles/home.css
@@ -8,6 +8,12 @@ body {
   position: relative;
 }
 
+.HomeModal {
+  width: 75vw;
+  max-width: 450px;
+  background-color: lightcoral;
+}
+
 .slider-container img {
   position: absolute;
   width: 100%;
