--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -24,7 +24,8 @@
 
 .modal,
 .modal1,
-.modal2 {
+.modal2,
+.modal3 {
   height: auto;
   display: none;
   position: fixed;
@@ -97,7 +98,7 @@
 --------------------------------------------------------------*/
 
 .modal2 {
-  width: 80vw;
+  width: 90vw;
   max-width: 500px;
   left: 50%;
   top: 50%;
@@ -108,6 +109,22 @@
 }
 
 .modal2.show {
+  display: block;
+  animation: fadeIn2 0.3s forwards, slideIn2 0.3s forwards;
+}
+
+.modal3 {
+  width: 80vw;
+  max-width: 400px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.modal3.show {
   display: block;
   animation: fadeIn2 0.3s forwards, slideIn2 0.3s forwards;
 }
