--- a/styles/utilis.css
+++ b/styles/utilis.css
@@ -128,3 +128,17 @@
 #buttonsContainer button:hover {
   background-color: #dfdfdf;
 }
+
+
+/* END of Sendwich Menu Styling  */
+
+/* Close Button Styling  */
+
+.close-modal-btn {
+
+  font-size: 1.5rem;
+  cursor: pointer;
+  background-color: none;
+  outline: none;
+  border: none;
+}
