--- a/styles/userModal.css
+++ b/styles/userModal.css
@@ -26,7 +26,6 @@
 .modal1,
 .modal2,
 .modal3 {
-  height: auto;
   display: none;
   position: fixed;
   background-color: #fff;
@@ -44,6 +43,8 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  padding: 25px 0;
+  height: auto;
 }
 
 /*--------------------------------------------------------------
