--- a/styles/header.css
+++ b/styles/header.css
@@ -10,7 +10,7 @@
 # Header Section Styling
 --------------------------------------------------------------*/
 
-header { 
+.indexHeader {
   display: flex;
   position: sticky;
   top: 0;
@@ -19,6 +19,20 @@ header {
   justify-content: space-between;
   align-items: center;
   background-color: var(--color-bck);
+  row-gap: 10px;
+  padding: 10px 15px;
+}
+
+header { 
+  display: flex;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--color-bck);
+  row-gap: 20px;
   padding: 10px 15px;
 }
 
@@ -47,4 +61,5 @@ header button {
 .cartHeader {
   display: flex;
   column-gap: 10px;
+  width: 100%;
 }
