--- a/styles/shopping-cart.css
+++ b/styles/shopping-cart.css
@@ -1,15 +1,10 @@
-.bckHeader {
-  display: flex;
-  width: 100%;
-  justify-content: start;
-  align-items: center;
-}
 
 .bckCartbtn {
   background-color: transparent;
   font-size: 1.1rem;
   color: var(--color-font);
-  column-gap: 10px;
+  column-gap: 6px;
   cursor: pointer;
+  white-space: nowrap;
 
 }
