--- a/styles/shopping-cart.css
+++ b/styles/shopping-cart.css
@@ -1,3 +1,14 @@
+/*
+* Website Designed by Denis Januzi
+* Created: April 1 2024
+* Contact Address: denisjanuzi@gmail.com (+38349106068)
+* Author: Denis Januzi
+* License: denis.cilesi.com
+*/
+
+/*--------------------------------------------------------------
+# Shopping Cart Product Section Styling
+--------------------------------------------------------------*/
 
 .bckCartbtn {
   background-color: transparent;
@@ -6,9 +17,37 @@
   column-gap: 6px;
   cursor: pointer;
   white-space: nowrap;
-
 }
 
-/* Shopping Cart Product Section Styling */
+/* Main Table Styling */
+.cartProducts table {
+  width: 100%;
+  height: 100vh;
+  padding: 15px;
+  margin-top: 25px;
+}
 
+.cartProducts tbody {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  height: auto;
+  min-height: 150px;
+  background-color: rgb(219, 219, 219);
+  border-radius: 8px;
+  padding: 15px;
+}
 
+.cartProducts tr {
+display: flex;
+flex-direction: column;
+justify-content: center;
+row-gap: 15px;
+width: 100%;
+}
+
+.prductimgBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
