--- a/styles/shopping-cart.css
+++ b/styles/shopping-cart.css
@@ -20,34 +20,55 @@
 }
 
 /* Main Table Styling */
-.cartProducts table {
-  width: 100%;
-  height: 100vh;
-  padding: 15px;
-  margin-top: 25px;
-}
 
-.cartProducts tbody {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  height: auto;
-  min-height: 150px;
-  background-color: rgb(219, 219, 219);
-  border-radius: 8px;
-  padding: 15px;
-}
-
-.cartProducts tr {
-display: flex;
-flex-direction: column;
-justify-content: center;
-row-gap: 15px;
-width: 100%;
-}
-
-.prductimgBox {
+.cartSection {
   display: flex;
-  justify-content: center;
-  align-items: center;
   width: 100%;
+  flex-direction: column;
+  height: 100%;
+  overflow: auto;
+}
+
+.cartSection tbody {
+  display: flex;
+  flex-direction: column;
+  border-radius: 8px;
+  margin: 0 15px;
+  row-gap: 10px;
+  padding: 15px 0 29px 0;
+  height: 100%;
+}
+
+.cartSection tr {
+  display: grid;
+  padding: 15px 15px;
+  grid-template-columns: auto 3fr;
+  grid-template-rows: 1fr;
+  height: auto;
+  position: relative;
+  border-radius: 10px;
+  gap: 14px;
+  background-color: rgb(238, 238, 238);
+}
+
+.cartSection td {
+  display: flex;
+  align-items: center;
+  font-size: 1.1rem;
+}
+
+.cartSection img {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.cartSection .infBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-size: var(--size-inputText);
+  align-items: start;
+  gap: 8px;
 }
