--- a/styles/shopping-cart.css
+++ b/styles/shopping-cart.css
@@ -36,7 +36,7 @@
   margin: 0 15px;
   row-gap: 10px;
   padding: 15px 0 29px 0;
-  height: 100%;
+  height: auto;
 }
 
 .cartSection tr {
@@ -68,7 +68,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  font-size: var(--size-inputText);
   align-items: start;
   gap: 8px;
+}
+
+.footerSection {
+  display: flex;
+  gap: 10px;
+  padding: 15px;
+  flex-direction: column;
 }
