--- a/styles/general.css
+++ b/styles/general.css
@@ -61,6 +61,7 @@ body {
   display: flex;
   flex-direction: column;
   max-width: 768px;
+  position: relative;
   margin: 0 auto;
   background-color: var(--color-body);
 }
