--- a/styles/shopping-cart.css
+++ b/styles/shopping-cart.css
@@ -35,8 +35,14 @@
   border-radius: 8px;
   margin: 0 15px;
   row-gap: 10px;
-  padding: 15px 0 106px 0;
+  padding: 15px 0 100px 0;
   height: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .cartSection tbody {
+    padding: 0px;
+  }
 }
 
 .cartSection tr {
