--- a/styles/shopping-cart.css
+++ b/styles/shopping-cart.css
@@ -83,7 +83,7 @@
   gap: 10px;
   position: sticky;
   bottom: 0;
-  padding: 15px;
+  padding: 20px 15px;
   background-color: var(--color-body);
   flex-direction: column;
 }
