--- a/styles/shopping-cart.css
+++ b/styles/shopping-cart.css
@@ -55,13 +55,13 @@
 
 .cartSection td {
   display: flex;
-  align-items: center;
+  align-items: start;
   font-size: 1.1rem;
 }
 
 .cartSection img {
-  width: 60px;
-  height: 60px;
+  width: 70px;
+  height: 70px;
   object-fit: cover;
   border-radius: 10px;
 }
@@ -72,6 +72,16 @@
   justify-content: space-between;
   align-items: start;
   gap: 21px;
+}
+
+.infTitle {
+  font-size: clamp(0.9rem, 1.5vw, 1.2rem);
+  font-weight: 500;
+}
+
+.infPrice {
+  font-size: clamp(1.1rem, 1.5vw, 1.2rem);
+  font-weight: 700;
 }
 
 .footerSection {
